--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -132,3 +132,13 @@ footer img {
   padding: 4rem 4rem;
   margin-right: 1rem;
 }
+
+@media only screen and (max-width: 1024px) {
+  .container {
+    width: 100%;
+  }
+
+  header {
+    padding-top: 0;
+  }
+}
