--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -79,6 +79,7 @@ nav img {
 #products {
   display: flex;
   justify-content: center;
+  margin: 3rem 0;
 }
 
 .product {
@@ -87,7 +88,7 @@ nav img {
   justify-content: space-between;
   align-items: center;
   text-align: center;
-  margin: 3rem;
+  margin-right: 6rem;
   width: 5rem;
   height: 8rem;
 }
@@ -185,5 +186,26 @@ footer img {
 
   nav div span {
     display: none;
+  }
+
+  #products {
+    flex-direction: column;
+    align-items: center;
+    margin: 3.77rem 0;
+  }
+
+  .product {
+    margin: 1.54rem
+  }
+
+  .product p {
+    font-family: Helvetica;
+    font-size: 0.77rem;
+  }
+
+  #contact {
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
   }
 }
