Made font changes to the contact descriptions for phones.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -208,6 +208,11 @@ footer img {
     align-items: center;
   }
 
+  .info p {
+    font-family: Helvetica;
+    font-size: 0.77rem;
+  }
+
   footer {
     justify-content: center;
   }
