--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -166,14 +166,16 @@ footer img {
   }
 
   #banner {
-    margin: 9rem 0;
-    padding: 1rem 0;
+    margin: 9rem 0 0 0;
+    padding: 0;
     width: 100%;
   }
 
-  #banner {
+  #banner h1 {
     font-size: 1rem;
     text-align: center;
+    margin: 0;
+    padding: 1rem 0;
   }
 
   .regularMenu {
@@ -205,7 +207,12 @@ footer img {
 
   #contact {
     flex-direction: column;
-    align-items: center;
+  }
+
+  .info {
+    margin: 0;
+    width: 100%;
+    margin-bottom: 4rem;
   }
 
   .info p {
@@ -223,5 +230,6 @@ footer img {
 
   .title {
     margin-bottom: 1rem;
+    max-width: 100%;
   }
 }
